--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,17 @@
     <body>
         <a href="/" class="main-title">Prode Mundial 2014</a>
 
+        <div class="controles">
+            <a href="/reglas">reglas</a>
+            <a href="/reglas">posiciones</a>
+            {% if user %}
+            <span>{{user.name}} (<a href="/logout">logout</a>)</span>
+            {% else %}
+            <a href="/login">login</a>
+            <a href="/signup">sign up</a>
+            {% endif %}
+        </div>
+
         {% block body_content %}
         {% endblock %}
 
