--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -3,7 +3,7 @@ body {
     font-family: Helvetica, Arial, sans-serif;
     font-size: 14px;
 
-    width: 800px;
+    width: 600px;
     margin: 0 auto;
     padding: 10px;
     color: #333;
@@ -83,9 +83,8 @@ input[type=submit] {
 .controles {
     font-size: 13px;
     color: gray;
-    position: absolute;
-    top: 10px;
-    right: 10px;
+    text-align: right;
+    margin-bottom: 20px;
 }
 
 .fecha {
