--- a/templates/reglas.html
+++ b/templates/reglas.html
@@ -3,4 +3,48 @@
 {% block body_content %}
 <h2>Reglas</h2>
 
+<ol>
+    <li>Las planillas se podrán completar hasta 48 hs. antes del primer partido del mundial. Las planillas para las rondas de la llave (8vos / 4tos / Semi  / Final) se recepcionarán hasta 24 hs. antes del primer partido de la ronda.</li>
+    <li>El costo para participar es de $25 por persona. Se abona una sola vez para todo el mundial.</li>
+    <li>El dinero recaudado es totalmente repartido en premios. El participante que haga mas puntos, se llevará el 75% del total recaudado.  Para el segundo 15%, y para el tercero 10%.</li>
+    <li>El que no entregue la planilla a tiempo, no podrá participar de la siguiente ronda.  O sea, de querer seguir jugando, deberá esperar a la siguiente Ronda.</li>
+    <li>En caso de que haya empate en las primeras tres posiciones, se resolverá según quien haya hecho mas puntos con la PLANILLA DE LA PRIMER RONDA. En caso de seguir empatados, se dividirán en partes iguales.</li>
+    <li>Para demostrar la LEGALIDAD de los puntajes, cada uno podrá controlar el puntaje de todos los participantes, porque se les enviará antes del día de comienzo de cada etapa a TODOS los participantes de “EL PRODE DEL MUNDIAL”, el total de las planillas con los resultados propuestos por cada uno.</li>
+    <li>Las posiciones se actualizarán diariamente y podrán ser vistas desde el sitio.</li>
+    <li>Puede participar cualquiera, mientras cumpla con las condiciones mencionadas arriba.</li>
+    <li>Pueden invitar a cualquier amigo/Conocido/etc, pero serán uds. los responsables de recaudar la plata de cada uno de ellos.</li>
+    <li>
+    Los puntajes se calculan de la siguiente manera:
+    <ul>
+        <li>Acertar el resultado final de un partido: 30 puntos.</li>
+        <li>Acertar el marcador de un partido: 15 puntos. Ej: Si se marca que Argentina ganará 4-0 a Bosnia y el partido termina 2-1 en favor a Argentina, se sumarán 30 puntos (por acertar que Argentina gana). Si el partido termina 4-0 en favor a Argentina, además de los 30 puntos se sumarán 15 por acertar el marcador. Pero si ese partido Argentina lo pierde o empata, no se suma ningún punto.</li>
+        <li>Acertar quien mete el primer gol de cada partido: 10 puntos.</li>
+        <li>Se sumarán puntos extras en caso de acertar quién es el campeón, segundo, tercer y cuarto puesto, goleador del campeonato y cuál será la posición final de Argentina. Los puntajes se determinarán de la siguiente manera:
+        <ul>
+            <li>Campeón: 100 puntos.</li>
+            <li>Segundo: 80 puntos.</li>
+            <li>Tercero: 60 puntos.</li>
+            <li>Cuarto: 50 puntos.</li>
+            <li>Goleador 1: 100 puntos.</li>
+            <li>Goleador 2: 70 puntos.</li>
+            <li>Posición Argentina: 100 puntos.</li>
+        </ul>
+        </li>
+    </ul>
+    </li>
+    <li>Por cualquier duda, comentario o propuesta que surja, lo mismo para cualquier error que detecten en el calculo de los puntos, sin duda enviar un mail a la dirección del Prode del mundial.</li>
+</ol>
+
+<p>
+Esperamos que todos podamos disfrutar de este Prode, que fue creado con el fin del entretenimiento y no del lucro...
+</p>
+
+<p>
+Los saluda atententamente
+</p>
+
+<p>
+La Comisión Directiva 
+PRODE DEL MUNDIAL 2010
+</p>
 {% endblock %}
