--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -228,3 +228,9 @@ input[type=submit] {
     margin: 0 5px;
 }
 
+.partidos td.score-partido {
+    background-color: #DCFFDC;
+    border: none;
+    font-size: 80%;
+    color: #555;
+}
