--- a/templates/index.html
+++ b/templates/index.html
@@ -84,7 +84,7 @@ Puntos: {{score.scoreTotal}} <br/>
                                 </select>
                             </td>
                             {% if score %}
-                            <td class="score-partido">{{score.scoreCampeon}}</td>
+                            <td class="score-partido">{{score.campeon}}</td>
                             {% endif %}
                         </tr>
                         <tr>
@@ -102,7 +102,7 @@ Puntos: {{score.scoreTotal}} <br/>
                                 </select>
                             </td>
                             {% if score %}
-                            <td class="score-partido">{{score.scoreSegundo}}</td>
+                            <td class="score-partido">{{score.segundo}}</td>
                             {% endif %}
                         </tr>
                         <tr>
@@ -120,7 +120,7 @@ Puntos: {{score.scoreTotal}} <br/>
                                 </select>
                             </td>
                             {% if score %}
-                            <td class="score-partido">{{score.scoreTercero}}</td>
+                            <td class="score-partido">{{score.tercero}}</td>
                             {% endif %}
                         </tr>
                         <tr>
@@ -138,7 +138,7 @@ Puntos: {{score.scoreTotal}} <br/>
                                 </select>
                             </td>
                             {% if score %}
-                            <td class="score-partido">{{score.scoreCuarto}}</td>
+                            <td class="score-partido">{{score.cuarto}}</td>
                             {% endif %}
                         </tr>
                         <tr>
@@ -156,7 +156,7 @@ Puntos: {{score.scoreTotal}} <br/>
                                 </select>
                             </td>
                             {% if score %}
-                            <td class="score-partido">{{score.scoreGoleador1}}</td>
+                            <td class="score-partido">{{score.goleador1}}</td>
                             {% endif %}
                         </tr>
                         <tr>
@@ -174,7 +174,7 @@ Puntos: {{score.scoreTotal}} <br/>
                                 </select>
                             </td>
                             {% if score %}
-                            <td class="score-partido">{{score.scoreGoleador2}}</td>
+                            <td class="score-partido">{{score.goleador2}}</td>
                             {% endif %}
                         </tr>
                         <tr>
@@ -192,7 +192,7 @@ Puntos: {{score.scoreTotal}} <br/>
                                 </select>
                             </td>
                             {% if score %}
-                            <td class="score-partido">{{score.scorePuestoArgentina}}</td>
+                            <td class="score-partido">{{score.posicion_argentina}}</td>
                             {% endif %}
                         </tr>
                     </tbody>
